Bug:  PRD Reviewer:  Self Comments:  Changes for Filr Axion (2.0) development.  {6th} 1. Continued work on the admin console's limit user visibility feature.
Files:
M    gwt/src/org/kablink/teaming/gwt/client/GwtTeamingMessages.java
M    gwt/src/org/kablink/teaming/gwt/client/GwtTeamingMessages.properties
A    gwt/src/org/kablink/teaming/gwt/client/binderviews/EmptyLimitUserVisibilityComposite.java
A    gwt/src/org/kablink/teaming/gwt/client/binderviews/LimitUserVisibilityView.java
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/folderdata/FolderColumn.java
D    gwt/src/org/kablink/teaming/gwt/client/rpc/shared/GetLimitUserVisibilityInfoCmd.java
D    gwt/src/org/kablink/teaming/gwt/client/rpc/shared/LimitUserVisibilityInfoRpcResponseData.java
M    gwt/src/org/kablink/teaming/gwt/client/rpc/shared/VibeRpcCmdType.java
M    gwt/src/org/kablink/teaming/gwt/client/widgets/LimitUserVisibilityDlg.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
M    gwt/src/org/kablink/teaming/gwt/server/GwtRpcServiceImpl.java
M    gwt/src/org/kablink/teaming/gwt/server/util/GwtServerHelper.java
M    gwt/src/org/kablink/teaming/gwt/server/util/GwtUserVisibilityHelper.java

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
@@ -102,6 +102,11 @@
 		.vibe-filtersPanel                 {padding-left: 10px; font-size: 11px !important;}
 	/* ...End:  Filter panel styles. */
 	
+	/* ...Start:  Limit User Visibility view styles. */
+		.vibe-limitUserVisibilityDataTable {}
+		.vibe-limitUserVisibilityFlowPanel {}
+	/* ...End:  Limit User Visibility view styles. */
+
 	/* Start:  Quick filter styles. */
 		.vibe-quickFilter_image      {cursor: pointer; margin-right: 5px;}
 		.vibe-quickFilter_input      {font-size: 11px !important; width: 130px; border: none !important; background-color: transparent !important; padding: 1px 0 !important; vertical-align: middle;}
